<resources>
    <string name="app_name">WAClone</string>

    <!--    region title menu-->
    <string name="menu_logout">Logout</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_call">Call</string>
    <!--    end region-->

    <!--    region hint EditText-->
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_password">Password</string>
    <string name="hint_message">Message</string>
    <string name="hint_status">Add a caption</string>
    <!--    end region-->

    <!--    region text button-->
    <string name="btn_login">Login</string>
    <string name="btn_signup">SignUp</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_delete_account">Delete Account</string>
    <string name="btn_send">Send</string>
    <!--    end region-->

    <!--    region text for TExtView-->
    <string name="txt_signup"><u>No Account? Go To SignUp</u></string>
    <string name="txt_login"><u>Already have an account? Go To Login</u></string>
    <string name="txt_chats">Chats</string>
    <string name="txt_status">Status</string>
    <string name="txt_welcome">Welcome to WhatsAppClone</string>
    <!--    end region-->

    <!--    region start content-->
    <string name="cont_hello_status_update_fragment">Hello Status Update Fragment</string>
    <string name="cont_hello_status_list_fragment">Hello Status fragment</string>
    <string name="cont_hello_chats_fragment">Hello Chats fragment</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    end region-->

</resources>