<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <!--region Profile ActionBar-->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_profil"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Profile"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>
    <!--endregion-->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_profil">

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dp16">

            <!--region image profile-->
            <RelativeLayout
                android:id="@+id/img_photo"
                android:layout_width="@dimen/dp150"
                android:layout_height="@dimen/dp150"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dp16">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_profile"
                    android:layout_width="@dimen/dp150"
                    android:layout_height="@dimen/dp150"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_user" />

                <ImageButton
                    android:id="@+id/imbtn_profile"
                    style="@style/StandardImageButton"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="@dimen/dp50"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/ic_camera" />

            </RelativeLayout>
            <!--endregion-->

            <!--region data user-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/till_name_profile"
                style="@style/StandardTextInput"
                android:layout_below="@id/img_photo"
                android:layout_centerHorizontal="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/till_email_profile"
                style="@style/StandardTextInput"
                android:layout_below="@id/till_name_profile"
                android:layout_centerHorizontal="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/till_phone_profile"
                style="@style/StandardTextInput"
                android:layout_below="@id/till_email_profile"
                android:layout_centerHorizontal="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_phone_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_apply"
                style="@style/StandardButton"
                android:layout_below="@id/till_phone_profile"
                android:layout_centerHorizontal="true"
                android:text="@string/btn_apply" />

            <Button
                android:id="@+id/btn_delete_account"
                style="@style/WarningButton"
                android:layout_below="@id/btn_apply"
                android:layout_centerHorizontal="true"
                android:text="@string/btn_delete_account" />
            <!--endregion-->

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/progress_layout"
        style="@style/ProgressLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>